--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,6 +5,24 @@
 width: 100%;
 height: 100%;
 }
-h1 {
-    color: red;
+
+.row {
+    width: 100%;
+    display: block;
+    border: 1px solid;
+    margin:5px;
+}
+.col {
+    display: inline-block;
+    width: 35%;
+    margin:30px;
+    height: 100%;
+}
+img {
+
+    width:300px;
+    height: 300px;
+}
+.my-list {
+   margin-top: -100px;
 }
