--- a/src/Assignment-4/assignment4.css
+++ b/src/Assignment-4/assignment4.css
@@ -1,7 +1,141 @@
 /* Our CSS file. */
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+body {
+    font-family: 'Raleway', sans-serif;
+  }
+  
 
-.container, .content {
-width: 100%;
-height: 100%;
+
+header {
+    background-color: #92E0E5;
+    color: white;
+    min-height: 50px;
+    padding: 0 25px;
+}
+header nav {
+    float: right;
+}
+header h1 {
+    float: left;
+    text-indent: -9999px;
+    background: url('./assets/img/dog-icon.svg');
+height: 35px;
+width: 35px;
+margin-top: 8px;   
+}
+nav li {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+nav a {
+    color: white;
+    text-decoration: none;
+}
+nav li:hover {
+    background-color: #3F8DA7;
+}
+
+#hero {
+    background: url('./assets/img/park.jpg') no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 50px 0px;
+    margin-bottom: 50px;
+}
+
+#hero img {
+    border:5px solid #3F8DA7;
+    border-radius: 50%;
+    display: block;
+    margin:auto;
+    margin-bottom: 25px;
+}
+ .btn {
+  background-color: white;
+  border: 5px solid #3F8DA7;
+  color: #3F8DA7;
+  padding: 5px 10px;
+  text-decoration: none;  
+}
+.btn:hover {
+    padding: 5px 10px;
+    background-color: #3F8DA7;
+    color: white;
+}
+.three-col{
+    width: 30%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: top;
+    margin: 0px 10px;
+}
+.three-col img {
+    border-radius: 50%;
+    border:3px solid #3F8DA7;
+    height: 200px;
+    width: 200px;
+    margin: 20px 0px;
+}
+.three-col p {
+    margin-bottom: 25px;
+}
+footer {
+    background-color: #3F8DA7;
+    color: white;
+    margin-top: 40px;
+    padding: 20px 0px;
+    text-align: center;
+}
+footer ul {
+    margin: 40px 0px;
+}
+footer li {
+    display: inline-block;
+    margin: 0px 25px;
 }
